--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -15,10 +15,12 @@
   <body>
     <div class="wrapper">
       <img src="/qr-code-component-main/images/image-qr-code.png" alt="" />
-      <h1 class="outfit-text">Improve your front-end skills by building projects</h1>
-      <p class="outfit-text">
-        Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-      </p>
+      <div class="text-wrap">
+        <h1 class="outfit-text">Improve your front-end skills by building projects</h1>
+        <p class="outfit-text">
+          Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+        </p>
+      </div>
     </div>
   </body>
 </html>
